CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

GET_DIRECTORY_PROPERTY(UTILS_INCLUDE_DIRS	DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/../../utils" DEFINITION UTILS_INCLUDE_DIRS)
GET_DIRECTORY_PROPERTY(UTILS_LIBRARIES      DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/../../utils" DEFINITION UTILS_LIBRARIES)

INCLUDE_DIRECTORIES(
    ${UTILS_INCLUDE_DIRS}
	${CMAKE_CURRENT_SOURCE_DIR}
)

ADD_EXECUTABLE(audiotest
	gmock-gtest-all.cpp
	main.cpp

    bufferedreadertest.cpp
)

LINK_DIRECTORIES(
    ${AUDIO_LIBRARY_DIRS}
)

TARGET_LINK_LIBRARIES(audiotest
	-lpthread
	${UTILS_LIBRARIES}
	${AUDIO_LIBRARIES}
)

ADD_TEST(AudioTests audiotest)
 
