CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

IF (STANDALONE)
	ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/../../utils "${CMAKE_CURRENT_BINARY_DIR}/utils")
ENDIF (STANDALONE)

GET_DIRECTORY_PROPERTY(UTILS_INCLUDE_DIRS	DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/../../utils" DEFINITION UTILS_INCLUDE_DIRS)
GET_DIRECTORY_PROPERTY(UTILS_LIBRARIES      DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/../../utils" DEFINITION UTILS_LIBRARIES)

INCLUDE_DIRECTORIES(
    ${UTILS_INCLUDE_DIRS}
	${CMAKE_CURRENT_SOURCE_DIR}
)

LINK_DIRECTORIES(
    ${AUDIO_LIBRARY_DIRS}
)

ADD_EXECUTABLE(audiotest EXCLUDE_FROM_ALL
    gmock-gtest-all.cpp
    main.cpp
)

TARGET_LINK_LIBRARIES(audiotest
    -lpthread
    ${UTILS_LIBRARIES}
    ${AUDIO_LIBRARIES}
)

ADD_TEST(NAME AudioTests COMMAND audiotest)
ADD_DEPENDENCIES(check audiotest)