INCLUDE_DIRECTORIES(${CMAKE_BINARY_DIR} ${AUDIO_INCLUDE_DIRS})
LINK_DIRECTORIES(${AUDIO_LIBRARY_DIRS})

ADD_EXECUTABLE(fileinfo EXCLUDE_FROM_ALL fileinfo.cpp)
TARGET_LINK_LIBRARIES(fileinfo audio utils)

ADD_EXECUTABLE(playback EXCLUDE_FROM_ALL playback.cpp)
TARGET_LINK_LIBRARIES(playback audio utils)
